syntax = "proto3";

package mizer.fixtures;

service FixturesApi {
  rpc GetFixtures (GetFixturesRequest) returns (Fixtures) {}
  rpc GetFixtureDefinitions (GetFixtureDefinitionsRequest) returns (FixtureDefinitions) {}
  rpc AddFixtures (AddFixturesRequest) returns (Fixtures) {}
}

message AddFixturesRequest {
  repeated AddFixtureRequest requests = 1;
}

message AddFixtureRequest {
  string definitionId = 1;
  string mode = 2;
  uint32 id = 3;
  uint32 channel = 4;
  uint32 universe = 5;
}

message GetFixturesRequest {}

message FixtureId {
  oneof id {
    uint32 fixture = 1;
    SubFixtureId sub_fixture = 2;
  }
}

message SubFixtureId {
  uint32 fixture_id = 1;
  uint32 child_id = 2;
}

message Fixtures {
  repeated Fixture fixtures = 1;
}

message Fixture {
  uint32 id = 1;
  string name = 2;
  string manufacturer = 3;
  string mode = 4;
  uint32 universe = 5;
  uint32 channel = 6;
  repeated FixtureControls controls = 7;
  repeated SubFixture children = 8;
}

message SubFixture {
  uint32 id = 1;
  string name = 2;
  repeated FixtureControls controls = 3;
}

enum FixtureControl {
  INTENSITY = 0;
  SHUTTER = 1;
  COLOR = 2;
  PAN = 3;
  TILT = 4;
  FOCUS = 5;
  ZOOM = 6;
  PRISM = 7;
  IRIS = 8;
  FROST = 9;
  GENERIC = 10;
}

message FixtureControls {
  FixtureControl control = 1;
  oneof value {
    FaderChannel fader = 2;
    ColorChannel color = 3;
    AxisChannel axis = 4;
    GenericChannel generic = 5;
  }
}

message FaderChannel {
  double value = 1;
}

message ColorChannel {
  double red = 1;
  double green = 2;
  double blue = 3;
}

message AxisChannel {
  double value = 1;
  double angle_from = 2;
  double angle_to = 3;
}

message GenericChannel {
  double value = 1;
  string name = 2;
}

message GetFixtureDefinitionsRequest {}

message FixtureDefinitions {
  repeated FixtureDefinition definitions = 1;
}

message FixtureDefinition {
  string id = 1;
  string name = 2;
  string manufacturer = 3;
  repeated FixtureMode modes = 4;
  FixturePhysicalData physical = 5;
  repeated string tags = 6;
}

message FixtureMode {
  string name = 1;
  repeated FixtureChannel channels = 2;
}

message FixtureChannel {
  string name = 1;
  oneof resolution {
    CoarseResolution coarse = 2;
    FineResolution fine = 3;
    FinestResolution finest = 4;
  }

  message CoarseResolution {
    uint32 channel = 1;
  }

  message FineResolution {
    uint32 fineChannel = 1;
    uint32 coarseChannel = 2;
  }

  message FinestResolution {
    uint32 finestChannel = 1;
    uint32 fineChannel = 2;
    uint32 coarseChannel = 3;
  }
}

message FixturePhysicalData {
  float width = 1;
  float height = 2;
  float depth = 3;
  float weight = 4;
}
